--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Encabezado -->
     <header id="inicio" class="bg-blue-600 text-white p-16 flex flex-col md:flex-row items-center justify-center space-y-4 md:space-y-0 md:space-x-4">
-       <img src="/img/CARTELXXI.jpg" alt="Cartel del evento" class="w-full md:w-1/4">
+       <img src="/2025/img/CARTELXXI.jpg" alt="Cartel del evento" class="w-full md:w-1/4">
         <div>
             <h2 class="text-4xl font-bold text-center md:text-left">XXI Jornadas SLCENT</h2>
             <p class="mt-4 text-xl text-center md:text-left">Jornadas de Software Libre, Cultura Emprendedora y Nuevas Tecnologías</p>
