--- a/charla.html
+++ b/charla.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Detalles de la Charla - SLCENT">
-    <link rel="icon" href="/img/favicon.svg">
+    <link rel="icon" href="/2025/img/favicon.svg">
     <title>Detalles de la Charla - SLCENT</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
@@ -75,6 +75,6 @@
             </a>
         </div>
     </footer>
-    <script src="/js/details.js"></script>
+    <script src="/2025/js/details.js"></script>
 </body>
 </html>
