--- a/index.html
+++ b/index.html
@@ -241,19 +241,19 @@
     <section id="colaboradores" class="p-8">
         <h2 class="text-2xl font-bold mb-4">Colaboradores</h2>
         <div class="flex flex-wrap space-x-4">
-            <a href="https://www.viewnext.com/" title="ViewNext"><img src="/img/viewnext.png" alt="ViewNext" class="h-16 mb-4"></a>
-            <a href="https://www.hiberus.com/" title="Hiberus"><img src="/img/hiberuslogocolab.png" alt="Hiberus Tecnología" class="h-24 mb-2"></a>
-            <a href="https://lajaqueria.org" title="La Jaquería"><img src="/img/jaqueria.png" alt="La Jaquería" class="h-24 mb-4"></a>
-            <a href="https://www.youtube.com/@lachozadigital" title="La Choza Digital"><img src="/img/choza.jpg" alt="La Choza Digital" class="h-24 mb-4"></a>
-            <a href="https://www.unit4.com/" title="Unit4"><img src="/img/LogoUnit4.jpeg" alt="Unit4" class="h-20 mb-4"></a>
-            <a href="https://www.almeriatech.es/" title="AlmeriaTech"><img src="/img/almeria-tech.svg" alt="AlmeriaTech" class="h-20 mb-4"></a>
-            <a href="https://ual.es/" title="Universidad de Almería"><img src="/img/logoual.png" alt="UAL" class="h-20 mb-4"></a>
-            <a href="https://arcadebits.es/" title="ArcadeBits"><img src="/img/logoarcade.jpeg" alt="ArcadeBits" class="h-20 mb-4"></a>
-            <a href="https://iesalandalus.org/" title="IES Al-Andalus"><img src="/img/logoies.png" alt="IES Al-Andalus" class="h-20 mb-4"></a>
-            <a href="https://blogsaverroes.juntadeandalucia.es/frantejada/" title="TDE"><img src="/img/logoTDE.png" alt="TDE" class="h-20 mb-4"></a>
-            <a href="https://juntadeandalucia.es/" title="Junta de Andalucia"><img src="/img/LogoJA.png" alt="juntadeandalucia" class="h-20 mb-4"></a>
-            <a href="https://iesalandalus.org/" title="Aula Ateca"><img src="/img/AulaAteca.png" alt="Aula Ateca" class="h-20 mb-4"></a>
-            <a href="https://iesalandalus.org/joomla/index.php/aula-emprendimiento-al-emprendelus" title="Al Empréndelus"><img src="/img/AlEmprendelus.png" alt="Al Emprendelus" class="h-20 mb-4"></a>
+            <a href="https://www.viewnext.com/" title="ViewNext"><img src="/2025/img/viewnext.png" alt="ViewNext" class="h-16 mb-4"></a>
+            <a href="https://www.hiberus.com/" title="Hiberus"><img src="/2025/img/hiberuslogocolab.png" alt="Hiberus Tecnología" class="h-24 mb-2"></a>
+            <a href="https://lajaqueria.org" title="La Jaquería"><img src="/2025/img/jaqueria.png" alt="La Jaquería" class="h-24 mb-4"></a>
+            <a href="https://www.youtube.com/@lachozadigital" title="La Choza Digital"><img src="/2025/img/choza.jpg" alt="La Choza Digital" class="h-24 mb-4"></a>
+            <a href="https://www.unit4.com/" title="Unit4"><img src="/2025/img/LogoUnit4.jpeg" alt="Unit4" class="h-20 mb-4"></a>
+            <a href="https://www.almeriatech.es/" title="AlmeriaTech"><img src="/2025/img/almeria-tech.svg" alt="AlmeriaTech" class="h-20 mb-4"></a>
+            <a href="https://ual.es/" title="Universidad de Almería"><img src="/2025/img/logoual.png" alt="UAL" class="h-20 mb-4"></a>
+            <a href="https://arcadebits.es/" title="ArcadeBits"><img src="/2025/img/logoarcade.jpeg" alt="ArcadeBits" class="h-20 mb-4"></a>
+            <a href="https://iesalandalus.org/" title="IES Al-Andalus"><img src="/2025/img/logoies.png" alt="IES Al-Andalus" class="h-20 mb-4"></a>
+            <a href="https://blogsaverroes.juntadeandalucia.es/frantejada/" title="TDE"><img src="/2025/img/logoTDE.png" alt="TDE" class="h-20 mb-4"></a>
+            <a href="https://juntadeandalucia.es/" title="Junta de Andalucia"><img src="/2025/img/LogoJA.png" alt="juntadeandalucia" class="h-20 mb-4"></a>
+            <a href="https://iesalandalus.org/" title="Aula Ateca"><img src="/2025/img/AulaAteca.png" alt="Aula Ateca" class="h-20 mb-4"></a>
+            <a href="https://iesalandalus.org/joomla/index.php/aula-emprendimiento-al-emprendelus" title="Al Empréndelus"><img src="/2025/img/AlEmprendelus.png" alt="Al Emprendelus" class="h-20 mb-4"></a>
             <a href="https://iesalandalus.org/joomla/index.php/aula-emprendimiento-al-emprendelus" title="Erasmus +"><img src="/img/erasmuspluslogo.png" alt="Erasmus +" class="h-20 mb-4"></a>
 
 
